complete final MVP

--- a/deploy/UI/additional_demo/index.html
+++ b/deploy/UI/additional_demo/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" type="text/css" href="./css/list-groups.css">
     <link rel="stylesheet" type="text/css" href="./css/grid.css">
     <link rel="stylesheet" type="text/css" href="./css/footer.css">
+    <link rel="stylesheet" type="text/css" href="./css/fullscreen.css">
+
     <script src='https://get.mavo.io/mavo.js'></script>
 </head>
 
@@ -49,8 +51,8 @@
 
     <div class="container px-4">
         <div class="container-fluid my-1 themed-container text-medium" style="color:black;">
-            <div class="themed-container text-center fw-bolder display-6 mx-1" style="color: black;">ADDITIONAL SINGLE
-                IMAGE SUPER RESOLUTION TASK</div>
+            <div class="themed-container text-center fw-bolder display-6 mx-1" style="color: black;">
+                ADDITIONAL SINGLE IMAGE SUPER RESOLUTION TASK</div>
             <div class="row mb-3 mx-1 text-center">
                 <div class="col-6 themed-grid-col">
                     <div class="bd-example-snippet bd-code-snippet">
@@ -60,7 +62,8 @@
                                     xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 300x200"
                                     preserveAspectRatio="xMidYMid slice" focusable="false">
                                     <title>Low resolution image</title>
-                                    <rect width="100%" height="100%" fill="#868e96" id="placeholder-rect"></rect>
+                                    <rect width="100%" height="100%" fill="#868e96" id="placeholder-rect"
+                                        onclick="fullScreenImage('input-image')"></rect>
                                     <text x="50%" y="50%" fill="#dee2e6" dy=".3em" id="thumbnil">Upload image</text>
                                 </svg>
                                 <figcaption class="figure-caption">Low resolution image need increased quality
@@ -68,8 +71,7 @@
                             </figure>
                         </div>
                         <div class="mb-3">
-                            <label class="form-label text-start" for="customFile">Choose file from local
-                                storage</label>
+                            <label class="form-label text-start" for="customFile">Choose file from local storage</label>
                             <input type="file" class="form-control" accept="image/png, image/jpeg, image/jpg"
                                 id="image-file" onchange="displayImage(this)">
                         </div>
@@ -81,14 +83,14 @@
                             xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 400x300"
                             preserveAspectRatio="none" focusable="false">
                             <title>Super resolution image</title>
-                            <rect width="100%" height="100%" fill="#868e96" id="SRImage-rect"></rect>
+                            <rect width="100%" height="100%" fill="#868e96" id="SRImage-rect"
+                                onclick="fullScreenImage('sr-image')"></rect>
                             <text style="white-space: pre-wrap" x="50%" y="50%" fill="#dee2e6" dy=".3em"
                                 id="SRImage-text">
                                 Super resolution image
                             </text>
                         </svg>
-                        <figcaption class="figure-caption">Super resolution has improved images using the HAT-S
-                            model
+                        <figcaption class="figure-caption">Super resolution has improved images using the HAT-S model
                         </figcaption>
                     </figure>
                 </div>
